@@ -179,12 +179,12 @@ class pts_graph_lines extends pts_graph_core
 				$max_value = pts_math::max_number($this->i['graph_max_value'], $max_value) * 1.2; // leave room at top of graph
 				$this->i['graph_max_value'] = round($max_value, $max_value < 10 ? 1 : 0);
 				$this->i['graph_max_value'] = round(ceil($this->i['graph_max_value'] / $this->i['mark_count']), (0 - strlen($this->i['graph_max_value']) + 2)) * $this->i['mark_count'];
-				if($min_value > 20)
+				/*if($min_value > 20)
 				{
 					// Adjust bottom of graph to make it fit nicer on display
 					$this->i['graph_min_value'] = floor($min_value * 0.95);
 					$this->i['graph_max_value'] += $this->i['graph_min_value'] % $this->i['mark_count'];
-				}
+				}*/
 			}
 		}
 	}
