@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Increase compression factor when uploading benchmark results
 pts-core: Last minute fixes for PHP 8.x
+turbostat: Add TurboStat module to easily generate turbostat dumps on a per-test basis to log files
 
 Phoronix Test Suite 10.2.0 Milestone 1
 21 November 2020
